reflect-demo/tests/errors/invalid_reflect_attribute_path.stderr
error: expected `=`
 --> tests/errors/invalid_reflect_attribute_path.rs:3:26
  |
3 |     #[reflect(output_type)]
  |                          ^
